# Kavenegar

./: CMakeLists.txt  Kavenegar  README.md  api.cpp  api.hpp  common.hpp  kavenegar.cpp  kavenegar.hpp
include/: common.hpp
include/webservice/: networkrequest.hpp
src/: api.cpp  kavenegar.cpp
src/webservice/: networkrequest.cpp
webservice/: networkrequest.cpp  networkrequest.hpp
